Horiseon website fixed

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services - Social Media Marketing Agency</title>
 </head>
 
 <body>
-    <div class="header">
+    <!--This is the header section holds the navigation links and the website title-->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
+                <!--There are the 3 navigation links on the website-->
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -22,61 +24,84 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        </nav>
+    </header>
+    <!--This is a Hero section with a background Images that shows team members at table having a meeting-->
+    <section class="hero"></section>
+
+    <!-- This is a Content section with articles about different services Horiseon provide-->
+    <section class="content">
+       <!--Informative article about Search Engine Optimization-->
+        <article id="search-engine-optimization" class="search-engine-optimization">
+            <!-- This is a image this is related to Search Engine Optimization-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="This is a image of an diagram expliation of Seach Engine Optimization" class="float-left" /> 
             <h2>Search Engine Optimization</h2>
             <p>
+                <!--This is a brief description of Search Engine Optimization-->
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </article>
+        <!--Informative article  about Online Reputation-->
+        <article id="online-reputation-management" class="online-reputation-management">
+            <!-- This is a image this is related to Online Reputation-->
+            <img src="./assets/images/online-reputation-management.jpg" alt="This is a image of a bar chart and pie graphs that represent Online reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
+                <!--This is a brief description of Online Reputation-->
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </article>
+        <!--Informative article about Social Media Marketing-->
+        <article id="social-media-marketing" class="social-media-marketing">
+            <!-- This is a image this is related to Social Media Marketing-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="This is a image that shows aspets that are related to Social Media Markeing such as sharing, media, social media likes etc" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
+                <!--This is a brief description of Social Media Marketing-->
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </article>
+    </section>
+    <section class="benefits">
+        <h2>Our Benefits</h2>
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="This is a icon that is related to Lead Generation "/>
             <p>
+                <!--This is a brief description of Lead Generation-->
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <!-- This section is an article about brand awareness-->
+        <article class="benefit-brand">
+            <!-- This is a image this is related to Brand awareness-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="This is a icon that is related to Brand Awareness"/>
             <p>
+                <!-- This is a breif description of brand awareness-->
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <!-- This section is an article about cost management-->
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <!-- This is a image this is related to Cost Management-->
+            <img src="./assets/images/cost-management.png" alt="This is a icon that is related to Cost Management"></img>
             <p>
+                <!-- This is a breif description of Cost Management-->
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </article>
+    </section>
+
+
+    <!-- This is the Footer section - here holds copyright information and credit for who made the website which is Horiseon-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
